# aura-bot

./: .env.sample  .gitignore  Cargo.toml  README.md  main.rs
.github/workflows/: build.yml  ci.yml  docker-image.yml
docker/: Dockerfile
src/: config.rs  handler.rs  lib.rs  main.rs  replies.rs  types.rs
src/commands/: age.rs  aura.rs  classes.rs  command.rs  help.rs  mod.rs  rate.rs
src/model/: data.rs
tests/: config_tests.rs  replies_tests.rs
