[package]
name = "aura-bot"
version = "0.2.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.2"
poise = "0.6.1"
log = "0.4.29"
anyhow = "1.0.100"
dashmap = "6.1.0"
[[bin]]
name = "aura-bot"
path = "src/main.rs"
